<resources>
    <string name="app_name">LeadershipDevotional</string>
    <string name="item_list_day">Day 1</string>
    <string name="bible_ref">1Timothy1:1</string>
    <string name="bible_ref_content">I can do all things through Christ who strenghtens me</string>
    <string name="text_title">Leadership</string>
    <string name="devotional_headiiinf">Devotional</string>
    <string name="leadership_devotional">Leadership Devotional</string>
    <!-- activity detailed-->
    <string name="day_count_msg">DAY 1</string>
    <string name="bible_ref_msg">2 Timothy 1:1</string>
    <string name="bible_ref_text_msg">Paul, an apostle of Jesus Christ by the will of God, according to the promise of life which is in Christ Jesus,</string>
    <string name="meditate_title_msg">Meditate</string>
    <string name="meditate_body">This man formally Saul has discovered himself in God through Christ Jesus; we should have the understanding that the mercy of God is always reaching out to every man, for them all to come to repentance (2Pt.3:9, John3:16).\nLikewise the love of God is opened to you, if you have not received Jesus as your Lord and savior. You need to believe in your heart that Jesus was sent by God to die for you on the cross that you will have this new life in Christ Jesus (Romans10:10). For all sin and came short of the glory of God. Man went into the dark with no sense of peace but now through Jesus Christ, we make peace with God (Rom.5:1).\n
So now after the process above, you are now a new creation as depicted here…
2Co 5:17   Therefore if any man be in Christ, he is a new creature: old things are passed away; behold, all things are become new.
You are now a new born baby in Christ; you are now a property of God in Christ Jesus. Hence, you have treasures in Christ for your use. As a baby a growth process begins….
1Pe 2:2   As newborn babes, desire the sincere milk of the word, that ye may grow thereby:
And this process is through the renewal of the mind, just as it was for Paul the Apostle:
Rom 12:2  And be not conformed to this world: but be ye transformed by the renewing of your mind, that ye may prove what is that good, and acceptable, and perfect, will of God.
Through this renewal process you will find yourself in God as Paul did.
</string>

    <!-- the bible -->
    <string name="bible_ref_text1">Paul, an apostle of Jesus Christ by the will of God, according to the promise of life which is in Christ Jesus,</string>
    <string-array name="bibleref">
        <item>Paul, an apostle of Jesus Christ by the will of God, according to the promise of life which is in Christ Jesus,</item>
        <item>To Timothy, my dearly beloved son: Grace, mercy, and peace, from God the Father and Christ Jesus our Lord.</item>
    </string-array>

</resources>